--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
 		}
 	},
 	"require": {
-		"symfony/symfony": "2.3.*",
-		"gedmo/doctrine-extensions": "2.3.*"
+		"symfony/symfony": "^2.3|^2.8",
+		"gedmo/doctrine-extensions": "^2.3"
 	},
 	"target-dir" : "Cogitoweb/TelemetryBundle"
 }
